# shrtnr

./: .dockerignore  .env.example  AGENTS.md  Cargo.toml  Dockerfile  README.md  urlshort.db
src/: db.rs  handlers.rs  main.rs  models.rs  qr.rs  state.rs  templates.rs  util.rs
