[package]
name = "project1"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = { version = "0.34", features = ["bundled"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nanoid = "0.4"
qrcode = { version = "0.14", default-features = false, features = ["svg", "image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
attohttpc = { version = "0.28", default-features = false, features = ["tls-rustls"] }
dotenvy = "0.15"
